--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -9,7 +9,7 @@
   <body>
     <h1>The Ultimate Reversed String!</h1>
 
-    <p><%= @reversed_string %></p>
+    <h2><%= @reversed_string %></h2>
 
   </body>
 </html>
